# maxiquad

./: .gitignore  Cargo.toml  readme.md
guests/basic-shapes-example/: build.sh
guests/basic-shapes-example/src/: lib.rs
spec/: host.wit
src/: main.rs
