[package]
name = "maxiquad"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace]
members = [
  "guests/basic-shapes-example",
]

[dependencies]
macroquad = "0.4.4"
wasmtime = { version = "15.0.1", features = ["component-model"] }
wasmtime-wasi = "15.0.1"
anyhow = "1.0.71"
async-trait = "0.1.77"
clap = { version = "4.4.14", features = ["derive"] }
futures = "0.3.29"
notify = "6.1.1"
async-channel = "2.1.1"